--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +48,20 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  
+}
+
+.left{
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 8px;
+  gap: 16px;
+}
+.right{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 8px;
+  gap: 16px;
 }
