--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,26 @@ img {
   height: 100px;
 }
 
+.lista{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+}
+
+.item{
+  width: 200px;
+  text-align: center;
+}
+
+
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
