--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -14,13 +14,25 @@ body {
   align-items: center;
   justify-content: center;
 }
+.header{
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
 
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 15px;
+  gap: 15px;
 }
+.gumbevi{
+  margin-top: 15px;
+}
+
 
 .icon {
   color: royalblue;
