--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,18 +2,61 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  height: 52px;
   background: darkmagenta;
   color: white;
+  font-size: 40px;
+  font-weight: 1000;
+  padding: 20px;
+}
+
+.content{
+  flex: 1;
+  display:flex;
+}
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  flex: 1 0 300px;
+}
+
+.smradovi{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card{
+  margin: 20px;
+  padding: 32px;
+  width: 300px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+a{
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  padding: 10px;
+  display: block;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .sidebar {
